@@ -4,6 +4,8 @@ Version 5.1.7
  - Fixed problem with pooling code where connections pooled from the pool were added
    twice to the in use pool.  This would cause a semaphore full exception
    when an attempt is made to release them back to the pool (bug #36688)
+ - Reversed order of Datetime and DateTime enums for MySqlDbType so that VB users won't get
+   autocorrection to Datetime (bug #37406)
 
 Version 5.1.6 - 5/7/08
  - Fixed problem where parameters lists were not showing when you tried to alter a routine 
